# Pacman_OpenGL

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  README.txt  checks.txt  compile.bat  makefile  project_2.cbp  tidy.sh  tidy_output.txt
.github/workflows/: build.yml  cmake-build.yml  cmake-linux.yml  cmake-windows.yml  cmake.yml  codeql-analysis.yml  github-actions.yml
include/glad/: glad.h
include/project/: CMakeConfig.h  CMakeConfig.h.in  Events.hpp  MainWindow.hpp  base.h  common.h  externs.h  game.h  gameLogic.h  gameState.hpp  ghost.h  gridBox.hpp  helpers.h  main.h  map.h  mapData.h  menu.hpp  pacman.h  pellet.h  resourceManager.h  shader.h  sprite.h  text_renderer.h  texture.h  timer.hpp  windowManager.h
resources/: config.json
resources/map/: map.xcf
shaders/: shader.fs  shader.vs
spdlog/: CMakeLists.txt
src/: Events.cpp  MainWindow.cpp  base.cpp  game.cpp  gameLogic.cpp  gameState.cpp  ghost.cpp  glad.c  gridBox.cpp  helpers.cpp  main.cpp  map.cpp  menu.cpp  pacman.cpp  pellet.cpp  resourceManager.cpp  shader.cpp  sprite.cpp  text_renderer.cpp  texture.cpp  timer.cpp  windowManager.cpp
